[gd_scene load_steps=4 format=3 uid="uid://dhwi08u42ms74"]

[ext_resource type="Theme" uid="uid://bhwmfnyyieplb" path="res://main_theme.tres" id="1_ugr42"]
[ext_resource type="Script" path="res://Scenes/ui/tooltip.gd" id="2_32wrg"]
[ext_resource type="Texture2D" uid="uid://c4e7ovx16yfl1" path="res://art/tile_0113.png" id="2_lvg6s"]

[node name="Tooltip" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_right = 55.0
offset_bottom = 36.0
grow_horizontal = 2
theme = ExtResource("1_ugr42")
script = ExtResource("2_32wrg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3
alignment = 1

[node name="TooltipIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
texture = ExtResource("2_lvg6s")
expand_mode = 1
stretch_mode = 5

[node name="TooltipCardTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_horizontal = 3
text = "Tooltip Card Title"
fit_content = true

[node name="TooltipCardDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "Tooltip text Tooltip text Tooltip text Tooltip text 
Tooltip text Tooltip text Tooltip text Tooltip text "
